tests/baselines/reference/tsxElementResolution13.errors.txt
file.tsx(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== file.tsx (1 errors) ====
    declare module JSX {
                   ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	interface Element { }
    	interface ElementAttributesProperty { pr1: any; pr2: any; }
    }
    
    interface Obj1 {
    	new(n: string): any;
    }
    var obj1: Obj1;
    <obj1 x={10} />; // Error
    